# murkelhausen_app_v2

./: .gitignore  Dockerfile  README.md  create_release.sh  docker-compose.yml  pyproject.toml  requirements.txt  rxconfig.py
.github/actions/semver/: Dockerfile  README.md  action.yml  entrypoint.sh  semver_tagging.py
.github/workflows/: main.yml  tagging.yml
alembic/: env.py
alembic/versions/: 3b6acd6a5397_.py  511852c42a0c_.py  691ecbcab429_.py  77ac4dbbe84b_.py  81be14b6398a_.py  99bbaa0045ee_.py  e431e8f02176_.py
murkelhausen_app_v2/: app.py  config.py  murkelhausen_app_v2.py
murkelhausen_app_v2/backend/: __init__.py  fussballde.py  google_calendar.py  gymbroich.py  handballnordrhein.py  mheg.py  owm.py  owm_functions.py  owm_models.py  pihole.py  ruhrbahn.py  ruhrbahn_DepartureModel.py  ruhrbahn_StationModel.py
murkelhausen_app_v2/backend/resources/: fussballde_sample.html  handballnordrhein_sample.html  vertretungsplan_complex.json  vertretungsplan_simple.json
murkelhausen_app_v2/backend/testdata/: departure.json  station.json
murkelhausen_app_v2/components/: navbar.py  sidebar.py
murkelhausen_app_v2/pages/: __init__.py  calendar.py  calender.py  fussball.py  gymbroich.py  handball.py  index.py  llm.py  mheg.py  pihole.py  ruhrbahn.py  school.py  table_test.py  timetables.py  weather.py
murkelhausen_app_v2/tasks/: __init__.py  buergeramt.py  pushover.py  test.py
murkelhausen_app_v2/templates/: template.py
tests/backend/: test_google_calendar.py
tests/tasks/: buergeramt.py
