[tool.poetry]
name = "murkelhausen-app-v2"
version = "0.12.6"
description = ""
authors = ["Arkadius Schuchhardt <arkadius@schuchhardt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "~0.7.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
cachetools = "^5.5.0"
babel = "^2.16.0"
beautifulsoup4 = "^4.12.3"
gcsa = "^2.5.1"
google-api-python-client = "^2.154.0"
pytz = "^2024.2"
apscheduler = "^3.11.0"
psycopg = "^3.2.4"
oauth2client = "^3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
mypy = "^1.13.0"
types-python-dateutil = "^2.9.0.20241206"
types-pytz = "^2024.2.0.20241221"
freezegun = "^1.5.1"

[tool.mypy]
python_version = "0.12.6"
warn_return_any = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
